fix dark mode theme

--- a/static/css/searchresult.css
+++ b/static/css/searchresult.css
@@ -6,84 +6,167 @@ tr.rowhighlight {background-color:#f0f8ff;margin:0;border:0;padding:0;spacing:0;
 
 /* bg colors from highlight. */
 tr.row-bg-color-red td {
- background-color: rgba(255, 85, 102, 0.3)
+ background-color: rgba(255, 128, 127)
 }
 tr.row-bg-color-red-light td {
- background-color: rgba(255, 85, 102, 0.1)
+ background-color: rgba(255,191, 191)
 }
 tr.row-bg-color-red-dark td {
- background-color: rgba(255, 85, 102, 0.5)
+ background-color: rgba(255, 1, 0)
 }
 
 tr.row-bg-color-blue td {
- background-color: rgba(0, 149, 191, 0.3)
+ background-color: rgba(128, 128, 255)
 }
 tr.row-bg-color-blue-light td {
- background-color: rgba(0, 149, 191, 0.1)
+ background-color: rgba(191, 191, 255)
 }
 tr.row-bg-color-blue-dark td {
- background-color: rgba(0, 149, 191, 0.5)
+ background-color: rgba(0, 1, 255)
 }
 
 tr.row-bg-color-green td {
- background-color: rgba(68, 187, 119, 0.3)
+ background-color: rgba(128, 255, 128)
 }
 tr.row-bg-color-green-light td {
- background-color: rgba(68, 187, 119, 0.1)
+ background-color: rgba(191, 255, 190)
 }
 tr.row-bg-color-green-dark td {
- background-color: rgba(68, 187, 119, 0.5)
+ background-color: rgba(0, 255, 1)
 }
 
 tr.row-bg-color-yellow td {
- background-color: rgba(255, 170, 68, 0.3)
+ background-color: rgba(255, 255, 128)
 }
 tr.row-bg-color-yellow-light td {
- background-color: rgba(255, 170, 68, 0.1)
+ background-color: rgba(255, 255, 191)
 }
 tr.row-bg-color-yellow-dark td {
- background-color: rgba(255, 170, 68, 0.5)
+ background-color: rgba(255, 255, 0)
 }
 
 tr.row-bg-color-purple td {
- background-color: rgba(170, 68, 255, 0.3)
+ background-color: rgba(255, 128, 255)
 }
 tr.row-bg-color-purple-light td {
- background-color: rgba(170, 68, 255, 0.1)
+ background-color: rgba(255, 191, 255)
 }
 tr.row-bg-color-purple-dark td {
- background-color: rgba(170, 68, 255, 0.5)
+ background-color: rgba(255, 0, 255)
 }
 
 tr.row-bg-color-grey td {
- background-color: rgba(153, 153, 153, 0.3)
+ background-color: rgba(177, 177, 177)
 }
 tr.row-bg-color-grey-light td {
- background-color: rgba(153, 153, 153, 0.1)
+ background-color: rgba(206, 206, 206)
 }
 tr.row-bg-color-grey-dark td {
- background-color: rgba(153, 153, 153, 0.5)
+ background-color: rgba(148, 148, 148)
+}
+
+body.darkmode tbody.list-item > tr.row-bg-color-red-light > td.collection-as-table,
+body.darkmode tbody.list-item > tr.row-bg-color-red-light > td.collection-as-table * {
+  background-color: rgba(250, 179, 166) !important;
+}
+body.darkmode tbody.list-item > tr.row-bg-color-red > td.collection-as-table,
+body.darkmode tbody.list-item > tr.row-bg-color-red > td.collection-as-table * {
+  background-color: rgba(230, 85, 88) !important;
+}
+body.darkmode tbody.list-item > tr.row-bg-color-red-dark > td.collection-as-table,
+body.darkmode tbody.list-item > tr.row-bg-color-red-dark > td.collection-as-table * {
+  background-color: rgba(214, 35, 55) !important;
+}
+
+
+body.darkmode tbody.list-item > tr.row-bg-color-blue-light > td.collection-as-table,
+body.darkmode tbody.list-item > tr.row-bg-color-blue-light > td.collection-as-table * {
+  background-color: rgba(157, 211, 252) !important;
+}
+body.darkmode tbody.list-item > tr.row-bg-color-blue > td.collection-as-table,
+body.darkmode tbody.list-item > tr.row-bg-color-blue > td.collection-as-table * {
+  background-color: rgba(70, 152, 241) !important;
+}
+body.darkmode tbody.list-item > tr.row-bg-color-blue-dark > td.collection-as-table,
+body.darkmode tbody.list-item > tr.row-bg-color-blue-dark > td.collection-as-table * {
+  background-color: rgba(12, 108, 232) !important;
+}
+
+
+body.darkmode tbody.list-item > tr.row-bg-color-green-light > td.collection-as-table,
+body.darkmode tbody.list-item > tr.row-bg-color-green-light > td.collection-as-table * {
+  background-color: rgba(186, 246, 164) !important;
+}
+body.darkmode tbody.list-item > tr.row-bg-color-green > td.collection-as-table,
+body.darkmode tbody.list-item > tr.row-bg-color-green > td.collection-as-table * {
+  background-color: rgba(89, 201, 77) !important;
+}
+body.darkmode tbody.list-item > tr.row-bg-color-green-dark > td.collection-as-table,
+body.darkmode tbody.list-item > tr.row-bg-color-green-dark > td.collection-as-table * {
+  background-color: rgba(30, 165, 29) !important;
+}
+
+
+body.darkmode tbody.list-item > tr.row-bg-color-yellow-light > td.collection-as-table,
+body.darkmode tbody.list-item > tr.row-bg-color-yellow-light > td.collection-as-table * {
+  background-color: rgba(255, 241, 155) !important;
+}
+body.darkmode tbody.list-item > tr.row-bg-color-yellow > td.collection-as-table,
+body.darkmode tbody.list-item > tr.row-bg-color-yellow > td.collection-as-table * {
+  background-color: rgba(255, 221, 66) !important;
+}
+body.darkmode tbody.list-item > tr.row-bg-color-yellow-dark > td.collection-as-table,
+body.darkmode tbody.list-item > tr.row-bg-color-yellow-dark > td.collection-as-table * {
+  background-color: rgba(255, 205, 7) !important;
+}
+
+
+body.darkmode tbody.list-item > tr.row-bg-color-purple-light > td.collection-as-table,
+body.darkmode tbody.list-item > tr.row-bg-color-purple-light > td.collection-as-table * {
+  background-color: rgba(246, 164, 224)!important;
+}
+body.darkmode tbody.list-item > tr.row-bg-color-purple > td.collection-as-table,
+body.darkmode tbody.list-item > tr.row-bg-color-purple > td.collection-as-table * {
+  background-color: rgba(201, 76, 190) !important;
+}
+body.darkmode tbody.list-item > tr.row-bg-color-purple-dark > td.collection-as-table,
+body.darkmode tbody.list-item > tr.row-bg-color-purple-dark > td.collection-as-table * {
+  background-color: rgba(165, 28, 165) !important;
+}
+
+
+body.darkmode tbody.list-item > tr.row-bg-color-grey-light > td.collection-as-table,
+body.darkmode tbody.list-item > tr.row-bg-color-grey-light > td.collection-as-table * {
+  background-color: rgba(206, 206, 206) !important;
+}
+body.darkmode tbody.list-item > tr.row-bg-color-grey > td.collection-as-table,
+body.darkmode tbody.list-item > tr.row-bg-color-grey > td.collection-as-table * {
+  background-color: rgba(177, 177, 177) !important;
+}
+body.darkmode tbody.list-item > tr.row-bg-color-grey-dark > td.collection-as-table,
+body.darkmode tbody.list-item > tr.row-bg-color-grey-dark > td.collection-as-table * {
+  background-color: rgba(148, 148, 148) !important;
 }
 
 /* Status Colours */
 tr.statusnew td {
- background-color: rgba(255, 85, 102, 0.1)
+ background-color: rgba(255, 191, 191)
 }
 
 tr.statusopen td {
- background-color: rgba(255, 170, 68, 0.1)
+ background-color: rgba(255, 255, 191)
 }
 
 tr.statusstalled td {
- background-color: rgba(170, 68, 255, 0.1)
+ background-color: rgba(255, 191, 255)
 }
 
 tr.statusresolved td {
- background-color: rgba(68, 187, 119, 0.1)
+ background-color: rgba(191, 255, 190)
 }
 
 tr.statusrejected td {
- background-color: rgba(153, 153, 153, 0.1)
+ background-color: rgba(206, 206, 206)
 }
 
 .statusnew, .statusopen, .statusstalled, .statusrejected, .statusresolved {
@@ -92,3 +175,4 @@ tr.statusrejected td {
 .statusnew, .statusopen, .statusstalled, .statusrejected, .statusresolved a, a:visited {
  text-align: left;
 }
+
